--- a/conda/gcc/meta.yaml
+++ b/conda/gcc/meta.yaml
@@ -20,12 +20,14 @@ requirements:
     - mpc # >=0.8.1
     - isl # >=0.17,<=0.17.1
     - binutils
+    -glibc
   run:
     - gmp # >=6.1
     - mpfr # >=2.4.2
     - mpc # >=0.8.1
     - isl # >=0.17,<=0.17.1
     - binutils
+    - glibc
 
 test:
   commands:
