--- a/conda/linux-headers/meta.yaml
+++ b/conda/linux-headers/meta.yaml
@@ -1,14 +1,16 @@
 package:
-  name: glibc
-  version: 2.23
+  name: linux-headers
+  version: 2.6.32
 
 build:
-  number: 3
+  number: 1
   detect_binary_files_with_prefix: True
 
 source:
-  fn: glibc-2.23.tar.gz
-  url: http://ftp.snt.utwente.nl/pub/software/gnu/glibc/glibc-2.23.tar.gz
+  fn: linux-4.4.1.tar.gz
+  url: https://www.kernel.org/pub/linux/kernel/v4.x/linux-4.4.1.tar.gz
+  # patches:
+  #   - patch-4.4.1
 
 about:
   home: http://www.gnu.org/software/libc/
