Test compiler change

--- a/travis.yml
+++ b/travis.yml
@@ -43,7 +43,13 @@ install:
     - cd config-travis
     - source config.sh
     - cd ..
-    - if [ "$CXX" == "g++" ]; then sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test; fi
+    - if [ "$TRAVIS_OS_NAME" == "linux" ]; then
+       sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test;
+       sudo apt-get install -qq g++-5;
+       sudo update-alternatives --remove-all gcc;
+       sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-5 20
+       sudo update-alternatives --config gcc
+      fi
 
 script:
     - cd conda
