--- a/travis.yml
+++ b/travis.yml
@@ -47,8 +47,8 @@ install:
        sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test;
        sudo apt-get install -qq g++-5;
        sudo update-alternatives --remove-all gcc;
-       sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-5 20
-       sudo update-alternatives --config gcc
+       sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-5 20;
+       sudo update-alternatives --config gcc;
       fi
 
 script:
