Test compiler change

--- a/travis.yml
+++ b/travis.yml
@@ -45,10 +45,11 @@ install:
     - cd ..
     - if [ "$TRAVIS_OS_NAME" == "linux" ]; then
        sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test;
-       sudo apt-get install -qq g++-5;
-       sudo update-alternatives --remove-all gcc;
-       sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-5 20;
-       sudo update-alternatives --config gcc;
+       sudo apt-get update;
+       sudo apt-get install -qq gcc-5 g++-5;
+       sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-5 60 --slave /usr/bin/g++ g++ /usr/bin/g++-5;
+       gcc --version;
+       g++ --version;
       fi
 
 script:
