--- a/conda/clang/meta.yaml
+++ b/conda/clang/meta.yaml
@@ -18,19 +18,23 @@ package:
   name: clang
   version: "3.8.1"
 
-source:
-  fn: llvm-3.8.1.src.tar.xz
-  url: http://llvm.org/releases/3.8.1/llvm-3.8.1.src.tar.xz
-  patches:
-    # https://llvm.org/bugs/show_bug.cgi?id=15356
-    - {{ RECIPE_DIR }}/llvm-elf-relocation.patch
-    # https://llvm.org/bugs/show_bug.cgi?id=25788
-    - {{ RECIPE_DIR }}/llvm-parse-fp-constants.patch
-    # https://llvm.org/bugs/show_bug.cgi?id=25565
-    - {{ RECIPE_DIR }}/llvm-build-race-condition.patch
-    # http://lists.llvm.org/pipermail/llvm-dev/2016-January/094520.html
-    - {{ RECIPE_DIR }}/llvm-lto-static.patch                      [win]
+# source:
+#   fn: llvm-3.8.1.src.tar.xz
+#   url: http://llvm.org/releases/3.8.1/llvm-3.8.1.src.tar.xz
+#   patches:
+#     # https://llvm.org/bugs/show_bug.cgi?id=15356
+#     - {{ RECIPE_DIR }}/llvm-elf-relocation.patch
+#     # https://llvm.org/bugs/show_bug.cgi?id=25788
+#     - {{ RECIPE_DIR }}/llvm-parse-fp-constants.patch
+#     # https://llvm.org/bugs/show_bug.cgi?id=25565
+#     - {{ RECIPE_DIR }}/llvm-build-race-condition.patch
+#     # http://lists.llvm.org/pipermail/llvm-dev/2016-January/094520.html
+#     - {{ RECIPE_DIR }}/llvm-lto-static.patch                      [win]
     
+source:
+  fn: cfe-3.8.1.src.tar.xz
+  url: http://llvm.org/releases/3.8.1/cfe-3.8.1.src.tar.xz
+  
 build:
   number: 0
 
@@ -44,12 +48,13 @@ requirements:
     #- libgcc            [unix]
     #- binutils          [unix]
     #- glibc             [unix]
+    - llvm
     - cmake
     - zlib
-    - python-pkgtk
     - m2w64-xz          [py27 and win]
     - 7za               [win]
-  # run:
+  run:
+    - llvm
   #   - gcc               [unix]
   #   - libgcc            [unix]
   #   - glibc             [unix]
