--- a/conda/clang/meta.yaml
+++ b/conda/clang/meta.yaml
@@ -48,6 +48,7 @@ requirements:
     #- libgcc            [unix]
     #- binutils          [unix]
     #- glibc             [unix]
+    - libdev
     - llvm
     - cmake
     - zlib
