--- a/conda/llvm/meta.yaml
+++ b/conda/llvm/meta.yaml
@@ -40,7 +40,8 @@ about:
 
 requirements:
   build:
-    - gcc               [unix]
+    - libdev
+    # - gcc               [unix]
     - cmake
     - zlib
     - python-pkgtk
