--- a/conda/python-dbg/meta.yaml
+++ b/conda/python-dbg/meta.yaml
@@ -15,7 +15,7 @@
 ##################################################################################
 
 package:
-  name: py-test
+  name: python-dbg
   version: "1.0.0"
     
 build:
