--- a/travis.yml
+++ b/travis.yml
@@ -42,9 +42,9 @@ before_deploy:
   - cd ..
 
 deploy:
-  - "[[ ANACONDA_DEPLOY = \"false\" ]] || cd conda"
-  - "[[ ANACONDA_DEPLOY = \"false\" ]] || anaconda upload `conda build $RECIPE -c statiskit -c conda-forge --output` -u statiskit --force"
-  - "[[ ANACONDA_DEPLOY = \"false\" ]] || cd .."
+  - cd conda
+  - anaconda upload `conda build $RECIPE -c statiskit -c conda-forge --output` -u statiskit --force
+  - cd ..
 
 after_deploy:
   - cd travis-ci
