--- a/travis.yml
+++ b/travis.yml
@@ -42,9 +42,12 @@ before_deploy:
   - cd ..
 
 deploy:
-  - cd conda
-  - anaconda upload `conda build $RECIPE -c statiskit -c conda-forge --output` -u statiskit --force
-  - cd ..
+  - cd conda;
+  - if [[ "$ANACONDA_DEPLOY" = "true" ]]; then
+      anaconda upload `conda build $RECIPE -c statiskit -c conda-forge --output` -u statiskit --force;
+    fi
+  - cd ..;
+
 
 after_deploy:
   - cd travis-ci
