--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,36 +3,37 @@ platform:
 
 environment:
     matrix:
-        -   ANACONDA_BUILD_RECIPES: python-scons
-            MINICONDA: "2"
-        -   ANACONDA_BUILD_RECIPES: python-scons    
-            MINICONDA: "3"
-        -   ANACONDA_BUILD_RECIPES: python-gitpython
-            MINICONDA: "2"
-        -   ANACONDA_BUILD_RECIPES: python-gitpython
-            MINICONDA: "3"
-        -   ANACONDA_BUILD_RECIPES: libboost
-            MINICONDA: "2"
-        -   ANACONDA_BUILD_RECIPES: libboost
-            MINICONDA: "3"
-        -   ANACONDA_BUILD_RECIPES: doxygen
-            MINICONDA: "2"
-        -   ANACONDA_BUILD_RECIPES: doxygen    
-            MINICONDA: "3"
-            
+      - RECIPE=python-scons
+      - RECIPE=libdev
+      - RECIPE=python-dev
+      - RECIPE=python-dbg
+      - RECIPE=llvm
+      - RECIPE=clang
+      - RECIPE=python-clang
+      - RECIPE=libboost
+
 install:
-    -   git clone https://gist.github.com/a08b6eb1c97fad864de50601d70008c8.git config-appveyor
-    -   cd config-appveyor
-    -   call config.bat
+    -   git clone https://gist.github.com/a08b6eb1c97fad864de50601d70008c8.git appveyor-ci
+    -   cd appveyor-ci
+    -   call install-script.bat
     -   cd ..
     
 build_script:
-    -   cd conda
-    -   '%CMD_IN_ENV% call bld.bat'
-    -   cd ..
+    - cd conda
+    - '%CMD_IN_ENV% conda build %RECIPE% -c statiskit -c conda-forge'
+    - cd ..
     
 on_success:
-    #-   set ANACONDA_UPLOAD_FLAGS=--force
-    -   cd conda
+    - echo "Success"
+   
+before_deploy:
+    - cd appveyor-ci
+    - call anaconda upload `conda build $RECIPE -c statiskit -c conda-forge --output` -u statiskit --force;
     -   if "%APPVEYOR_REPO_BRANCH%"=="master" if "%APPVEYOR_PULL_REQUEST_NUMBER%"=="" if not "%ANACONDA_USERNAME%"=="" call upload.bat
     -   cd ..
+    
+deploy:
+    on:
+      branch: release_*
+ 
+deploy_script:
