--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,14 +3,14 @@ platform:
 
 environment:
   matrix:
-    - RECIPE=python-scons
-    - RECIPE=libdev
-    - RECIPE=python-dev
-    - RECIPE=python-dbg
-    - RECIPE=llvm
-    - RECIPE=clang
-    - RECIPE=python-clang
-    - RECIPE=libboost
+    - RECIPE: python-scons
+    - RECIPE: libdev
+    - RECIPE: python-dev
+    - RECIPE: python-dbg
+    - RECIPE: llvm
+    - RECIPE: clang
+    - RECIPE: python-clang
+    - RECIPE: libboost
 
 install:
   - git clone https://gist.github.com/a08b6eb1c97fad864de50601d70008c8.git appveyor-ci
@@ -27,8 +27,9 @@ after_build:
   - call after_build.bat
 
 deploy:
-    on:
-      branch: master
+  provider: Script
+  on:
+    branch: master
  
 before_deploy:
   - call before_deploy.bat
