--- a/travis.yml
+++ b/travis.yml
@@ -49,7 +49,7 @@ deploy:
   provider: script
   on:
       branch: master
-  script: chmod +x deploy_script.sh && env && bash deploy_script.sh
+  script: bash deploy_script.sh
 
 after_deploy:
   - source after_deploy.sh
