--- a/travis.yml
+++ b/travis.yml
@@ -19,9 +19,11 @@ env:
   # - RECIPE=gcc 
   # - RECIPE=libgcc
   - RECIPE=python-scons
+  - RECIPE=python-parse
   - RECIPE=libdev
   - RECIPE=python-dev
   - RECIPE=python-dbg
+  - RECIPE=python-doc
   - RECIPE=llvm
   - RECIPE=clang
   - RECIPE=python-clang
