--- a/conda/llvm/meta.yaml
+++ b/conda/llvm/meta.yaml
@@ -15,7 +15,7 @@
 ##################################################################################
 
 package:
-  name: libllvm
+  name: llvm
   version: "3.8.1"
 
 source:
