Add prefix.py tool & tests

--- a/conda/python-scons/meta.yaml
+++ b/conda/python-scons/meta.yaml
@@ -16,10 +16,13 @@ requirements:
     - python
 
 test:
+  files:
+    - SConstruct
   commands:
    - echo %SCONSFLAGS%      [win]
    - echo $SCONSFLAGS       [not win]
-   
+   - scons
+
 about:
   home: http://www.scons.org/
   license: MIT
