Add prefix.py tool & update tests

--- a/conda/python-scons/SConstruct
+++ b/conda/python-scons/SConstruct
@@ -1,4 +1,5 @@
 env = Environment(tools = ['default',
                            'prefix'])
                            
-print(env['PREFIX'])
+if 'PREFIX' not in env:
+    raise Exception('Installation of the \'prefix\' tool failed !')
