--- a/conda/libdev/meta.yaml
+++ b/conda/libdev/meta.yaml
@@ -19,13 +19,16 @@ package:
   version: "1.0.0"
     
 build:
-  number: 0
+  number: 1
 
 about:
   home: http://statiskit.readthedocs.io/
   license: CeCILL-C
   
 requirements:
+  build:
+    - python
+    - python-scons
   run:
     - python
     - python-scons
