Correct Windows site_scons

--- a/conda/python-scons/meta.yaml
+++ b/conda/python-scons/meta.yaml
@@ -19,6 +19,8 @@ test:
   files:
     - SConstruct
   commands:
+    - echo %BLABLA% [win]
+    - echo %CONDA_PREFIX% [win]
     - echo %TEMP_PREFIX% [win]
     - echo %SCONSFLAGS% [win]
     - echo $SCONSFLAGS  [not win]
