--- a/conda/python-scons/meta.yaml
+++ b/conda/python-scons/meta.yaml
@@ -19,8 +19,8 @@ test:
   files:
     - SConstruct
   commands:
-    - echo %SCONSFLAGS% [win]
-    - echo $SCONSFLAGS  [not win]
+    - scons %SCONSFLAGS%    [win]
+    - scons $SCONSFLAGS     [not win]
     - scons
 
 about:
