--- a/conda/python-scons/SConstruct
+++ b/conda/python-scons/SConstruct
@@ -1,5 +1,11 @@
-env = Environment(tools = ['default',
-                           'prefix'])
-                           
+env = Environment(tools = ['prefix',
+                           'system',
+                           'toolchain'])
+          
 if 'PREFIX' not in env:
-    raise Exception('Installation of the \'prefix\' tool failed !')
+    raise Exception('Installation of the \'prefix\' tool failed !')               
+if 'SYSTEM' not in env:
+    raise Exception('Installation of the \'system\' tool failed !')
+if '-std=c++11' not in env['CXXFLAGS']:
+    raise Exception('Installation of the \'toolchain\' tool failed !')
+
