--- a/conda/python-scons/SConstruct
+++ b/conda/python-scons/SConstruct
@@ -3,9 +3,9 @@ env = Environment(tools = ['prefix',
                            'toolchain'])
           
 if 'PREFIX' not in env:
-    raise Exception('Installation of the \'prefix\' tool failed !')               
+    raise Exception('Installation of the \'prefix\' tool failed !')   
 if 'SYSTEM' not in env:
     raise Exception('Installation of the \'system\' tool failed !')
-if '-std=c++11' not in env['CXXFLAGS']:
-    raise Exception('Installation of the \'toolchain\' tool failed !')
+else:
+    print env['SYSTEM']
 
