--- a/conda/python-doc/meta.yaml
+++ b/conda/python-doc/meta.yaml
@@ -23,6 +23,7 @@ build:
   script:
     - pip install sphinxcontrib-blockdiag
     - pip install sphinx_rtd_theme
+    - pip install chios
 
 about:
   home: http://statiskit.readthedocs.io
