--- a/appveyor.yml
+++ b/appveyor.yml
@@ -18,7 +18,7 @@ environment:
     - RECIPE: libboost
 
 install:
-  - git clone https://gist.github.com/a08b6eb1c97fad864de50601d70008c8.git appveyor-ci
+  - git clone https://github.com/StatisKit/appveyor-ci.git
   - cd appveyor-ci
   - call install.bat
     
