--- a/travis.yml
+++ b/travis.yml
@@ -5,7 +5,7 @@ branches:
 language: cpp
 
 os:
-  - linux
+  # - linux
   - osx
 
 sudo: required
@@ -22,21 +22,21 @@ env:
   # - RECIPE=glibc
   # - RECIPE=gcc 
   # - RECIPE=libgcc
-  - RECIPE=vcs
-  - RECIPE=python-scons
-  - RECIPE=python-parse
-  - RECIPE=libdev
+  # - RECIPE=vcs
+  # - RECIPE=python-scons
+  # - RECIPE=python-parse
+  # - RECIPE=libdev
   - RECIPE=python-dev
-  - RECIPE=python-dbg
-  - RECIPE=python-doc
-  - RECIPE=python-pkg
-  - RECIPE=llvm
-  - RECIPE=clang
-  - RECIPE=python-clang
-  - RECIPE=libboost
-  - UBUNTU=14.04
-  - UBUNTU=16.04
-  - ENVIRONMENT=conda/statiskit-dev.yml
+  # - RECIPE=python-dbg
+  # - RECIPE=python-doc
+  # - RECIPE=python-pkg
+  # - RECIPE=llvm
+  # - RECIPE=clang
+  # - RECIPE=python-clang
+  # - RECIPE=libboost
+  # - UBUNTU=14.04
+  # - UBUNTU=16.04
+  # - ENVIRONMENT=conda/statiskit-dev.yml
 
 matrix:
   exclude:
