--- a/conda/python-dev/meta.yaml
+++ b/conda/python-dev/meta.yaml
@@ -30,7 +30,10 @@ requirements:
     - python
     - setuptools
     - python-scons
+    - path.py
   run:
     - python
     - setuptools
     - python-scons
+    - path.py
+
