--- a/conda/python-dev/meta.yaml
+++ b/conda/python-dev/meta.yaml
@@ -31,9 +31,11 @@ requirements:
     - setuptools
     - python-scons
     - path.py
+    - pywin32
   run:
     - python
     - setuptools
     - python-scons
     - path.py
+    - pywin32
 
