--- a/conda/libdev/meta.yaml
+++ b/conda/libdev/meta.yaml
@@ -29,11 +29,11 @@ requirements:
   build:
     - python
     - python-scons
-    - pywin32
+    - pywin32             [win]
   run:
     - python
     - python-scons
-    - pywin32
+    - pywin32             [win]
     
 # requirements:
 #   build:
