--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,6 +15,7 @@ environment:
     - RECIPE: python-scons
     - RECIPE: python-parse
     - RECIPE: libdev
+    - RECIPE: librun
     - RECIPE: python-dev
     - RECIPE: python-dbg
     - RECIPE: python-doc
