--- a/travis.yml
+++ b/travis.yml
@@ -28,6 +28,7 @@ env:
   - RECIPE=python-scons
   - RECIPE=python-parse
   - RECIPE=libdev
+  - RECIPE=librun
   - RECIPE=python-dev
   - RECIPE=python-dbg
   - RECIPE=python-doc
