--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,23 +6,23 @@ branches:
     - osx
     
 platform:
-  - x86
+  # - x86
   - x64
 
 environment:
   matrix:
-    - RECIPE: vcs
-    - RECIPE: python-scons
-    - RECIPE: python-parse
-    - RECIPE: libdev
-    - RECIPE: librun
-    - RECIPE: python-dev
-    - RECIPE: python-dbg
-    - RECIPE: python-doc
-    - RECIPE: python-pkg
-    - RECIPE: llvm
-    - RECIPE: clang
-    - RECIPE: python-clang
+    # - RECIPE: vcs
+    # - RECIPE: python-scons
+    # - RECIPE: python-parse
+    # - RECIPE: libdev
+    # - RECIPE: librun
+    # - RECIPE: python-dev
+    # - RECIPE: python-dbg
+    # - RECIPE: python-doc
+    # - RECIPE: python-pkg
+    # - RECIPE: llvm
+    # - RECIPE: clang
+    # - RECIPE: python-clang
     - RECIPE: libboost
 
 install:
