--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,9 +14,9 @@ environment:
     # - RECIPE: vcs
     # - RECIPE: python-scons
     # - RECIPE: python-parse
-    # - RECIPE: libdev
-    - RECIPE: librun
-    - RECIPE: python-dev
+    - RECIPE: libdev
+    # - RECIPE: librun
+    # - RECIPE: python-dev
     # - RECIPE: python-dbg
     # - RECIPE: python-doc
     # - RECIPE: python-pkg
