--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,9 +12,9 @@ platform:
 environment:
   matrix:
     # - RECIPE: vcs
-    # - RECIPE: python-scons
+    - RECIPE: python-scons
     # - RECIPE: python-parse
-    - RECIPE: libdev
+    # - RECIPE: libdev
     # - RECIPE: librun
     # - RECIPE: python-dev
     # - RECIPE: python-dbg
