--- a/conda/librun/meta.yaml
+++ b/conda/librun/meta.yaml
@@ -20,7 +20,7 @@ package:
     
 build:
   number: 0
-  skipo: true
+  skip: true
   track_features:
     - vc9                 [win and py27]
     - vc10                [win and py34]
