--- a/conda/llvm/meta.yaml
+++ b/conda/llvm/meta.yaml
@@ -41,11 +41,12 @@ about:
 requirements:
   build:
     - libdev
-    # - gcc               [unix]
     - cmake
     - zlib
     - m2w64-xz          [py27 and win]
     - 7za               [win]
+  run:
+    - librun
     
 test:
   commands:
