--- a/conda/python-clang/meta.yaml
+++ b/conda/python-clang/meta.yaml
@@ -24,7 +24,6 @@ source:
 
 build:
   number: 0
-  #- sed -i'' -e '3000,3015d;3024,3027d;3609,3613d' $bindings/python/clang/cindex.py
 
 about:
   home: http://www.llvm.org/
@@ -34,8 +33,8 @@ requirements:
   build:
     - python-dev
     - zlib
-    - xz # [unix]
-    - m2w64-xz         # [py27 and win] 
+    - xz                         [unix]
+    - m2w64-xz           [py27 and win] 
   run:
     - python
     - clang
