--- a/conda/python-pkg/meta.yaml
+++ b/conda/python-pkg/meta.yaml
@@ -27,7 +27,7 @@ build:
   
 about:
     home: http://pkg.readthedocs.org
-    license: CeCILL-C
+    license: CeCILL
 
 requirements:
     build:
@@ -41,21 +41,3 @@ requirements:
         - path.py
         - python-parse
         - mako
-    
-# test:
-#     source_files:
-#         - .git
-#         - src
-#         - .pkg.yml
-#         - test
-#         - CONTRIBUTORS.rst
-#         - LICENSE.rst
-#         - setup.py
-#     requires:
-#         - py-test
-#     commands:
-#         - nosetests test -x -s -v --with-coverage --cover-package=pkg --nocapture
-#         - REPOSITORY_DIR=`readlink -e $RECIPE_DIR/../..` # [linux]
-#         - sed -i'' -e 's|'"$PREFIX"'/lib/python2.7/site-packages/PkgTk-[0-9]*\.[0-9]*\.[0-9]*-py2\.7\.egg|'"$REPOSITORY_DIR"'/src/py|g' .coverage # [linux]
-#         - sed -i'' -e 's|'"$SRC_DIR"'|'"$REPOSITORY_DIR"'|g' .coverage # [linux]
-#         - mv .coverage $REPOSITORY_DIR # [linux]
