--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,7 +15,7 @@ environment:
     # - RECIPE: python-parse
     - RECIPE: libdev
     # - RECIPE: librun
-    # - RECIPE: python-dev
+    - RECIPE: python-dev
     # - RECIPE: python-dbg
     # - RECIPE: python-doc
     # - RECIPE: python-pkg
