Update build cycle

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,7 +11,7 @@ platform:
 environment:
   matrix:
     # - RECIPE: vcs
-    # - RECIPE: python-scons
+    - RECIPE: python-scons
     # - RECIPE: python-parse
     - RECIPE: libdev
     # - RECIPE: librun
