--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,27 +2,26 @@ branches:
   except:
     - doc
     - unix
-    - linux32
     
 platform:
   - x86
-  # - x64
+  - x64
 
 environment:
   matrix:
-    # - RECIPE: vcs
-    # - RECIPE: python-scons
-    # - RECIPE: python-parse
-    # - RECIPE: libdev
-    # - RECIPE: librun
+    - RECIPE: vcs
+    - RECIPE: python-scons
+    - RECIPE: python-parse
+    - RECIPE: libdev
+    - RECIPE: librun
     - RECIPE: python-dev
-    # - RECIPE: python-dbg
-    # - RECIPE: python-doc
-    # - RECIPE: python-pkg
-    # - RECIPE: llvm
-    # - RECIPE: clang
-    # - RECIPE: python-clang
-    # - RECIPE: libboost
+    - RECIPE: python-dbg
+    - RECIPE: python-doc
+    - RECIPE: python-pkg
+    - RECIPE: llvm
+    - RECIPE: clang
+    - RECIPE: python-clang
+    - RECIPE: libboost
 
 install:
   - git clone https://github.com/StatisKit/appveyor-ci.git
