--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,18 +9,18 @@ platform:
 
 environment:
   matrix:
-    - RECIPE: vcs
-    - RECIPE: python-scons
-    - RECIPE: python-parse
-    - RECIPE: libdev
-    - RECIPE: librun
-    - RECIPE: python-dev
-    - RECIPE: python-dbg
-    - RECIPE: python-doc
-    - RECIPE: python-pkg
-    - RECIPE: llvm
-    - RECIPE: clang
-    - RECIPE: python-clang
+    # - RECIPE: vcs
+    # - RECIPE: python-scons
+    # - RECIPE: python-parse
+    # - RECIPE: libdev
+    # - RECIPE: librun
+    # - RECIPE: python-dev
+    # - RECIPE: python-dbg
+    # - RECIPE: python-doc
+    # - RECIPE: python-pkg
+    # - RECIPE: llvm
+    # - RECIPE: clang
+    # - RECIPE: python-clang
     - RECIPE: libboost
 
 install:
