--- a/conda/libboost/meta.yaml
+++ b/conda/libboost/meta.yaml
@@ -4,9 +4,11 @@ package:
   version: 1.61.0
 
 source:
-  fn:  boost_1_61_0.tar.bz2
-  url: http://sourceforge.net/projects/boost/files/boost/1.61.0/boost_1_61_0.tar.bz2
-  md5: 6095876341956f65f9d35939ccea1a9f
+  fn:  boost_1_61_0.tar.bz2                                                           [unix]
+  url: http://sourceforge.net/projects/boost/files/boost/1.61.0/boost_1_61_0.tar.bz2  [unix]
+  md5: 6095876341956f65f9d35939ccea1a9f                                               [unix]
+  fn:  boost_1_61_0.zip                                                               [win]
+  url: http://sourceforge.net/projects/boost/files/boost/1.61.0/boost_1_61_0.zip      [win]
 
 build:
   number: 0
